develop/bugfixNumberAlignment3

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -107,13 +107,17 @@ main {
 }
 
 .number {
-  color: #ffffff;
-  border-radius: 100%;
-  background-color: #9356DC;
-  width: 10%;
-  height: 25px;
+  width: 7%;
+  height: 20px;
+  padding-top: 3px;
   margin-right: -15px;
   z-index: 2;
+  border-radius: 100%;
+  color: #ffffff;
+  background: #9356DC;
+  font-weight: 400;
+  font-size: 15px;
+  text-align: center;
 }
 
 .restaurants {
@@ -169,10 +173,12 @@ main {
   position: relative;
   width: 10%;
   font-size: 125%;
-  transition: background-color 400ms;
+  cursor: pointer;
+  transition: color 0ms;
+  background: linear-gradient(#ff79da, #9356DC);
 }
 .fa-heart :active {
-  background: linear-gradient(#ff79da, #9356DC);
+  color: linear-gradient(#ff79da, #9356DC);
 }
 
 .i-footer {
